profilelist1exp/unpackaged/objects/Alliance_Rebate_Request_Team__c.object
<CustomObject>
    <fields>
        <fullName>Alliance_Rebate_Request_Id__c</fullName>
        <label>Alliance Rebate Request Id</label>
        <referenceTo>Alliance_Rebate_Request__c</referenceTo>
        <relationshipName>Alliance_Rebate_Request_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Alliance_Rebate_Request_Teams1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Opportunity Sales Team</label>
    <nameField>
        <displayFormat>ARRTeam-{000000}</displayFormat>
        <label>Opportunity Sales Team Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Sales Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>